keycloak/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    cert-manager.io/cluster-issuer: cloudflare-lets-encrypt
    kubernetes.io/ingress.class: public
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - auth.prinzba.ch
  rules:
    - host: auth.prinzba.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
